# mailman3_webhook_archiver

./: .gitignore  README.md  flake.nix  pyproject.toml
mailman3_webhook_archiver/: __init__.py
