[tool.poetry]
authors = ["Laurent Fainsin <laurent@fainsin.bzh>"]
description = "Custom archiver for mailman3 which send email notifications to an HTTP webhook"
homepage = "https://github.com/Laurent2916/mailman3_webhook_archiver"
license = "MIT"
name = "mailman3_webhook_archiver"
readme = "README.md"
repository = "https://github.com/Laurent2916/mailman3_webhook_archiver.git"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
mailman = "^3.3.8"
zope = "^5.8.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.267"
black = "^23.3.0"
isort = "^5.12.0"

[tool.ruff]
line-length = 120
ignore = ["G004"]
select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "C90", # mccabe
  "COM", # flake8-commas
  "D",   # pydocstyle
  "EM",  # flake8-errmsg
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "G",   # flake8-logging-format
  "I",   # isort
  "N",   # pep8-naming
  "PIE", # flake8-pie
  "PTH", # flake8-use-pathlib
  "RET", # flake8-return
  "RUF", # ruff
  "S",   # flake8-bandit
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]

[tool.black]
include = '\.pyi?$'
target-version = ["py311"]
line-length = 120
exclude = '''
/(
  \.git
  \.venv
)/
'''

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
